[FIX] ADS-56-00-1808-12070: Slow Order Confirmation and changes to a SO running slow
Points of Improving the Process:
In Module sale_order_mass_confirm:
a. Added context keyword to identiy for BUlk SO Confirmation
b. To immediately commit once 1 Order is processed and not to wait the entire SO to be completed.
     Issue found when 500 SO's are to be confirmed and in #450  SO the process Time Out, Then all orders from 1-449 will
     not be processed or ignored.
c. Create a log to easy debug the process.

--- a/sale_order_mass_confirm/wizard/sale_order_confirm.xml
+++ b/sale_order_mass_confirm/wizard/sale_order_confirm.xml
@@ -7,7 +7,7 @@
         <field name="arch" type="xml">
             <form string="Confirm Sale Orders">
                 <footer>
-                    <button name="confirm_sale_orders" string="Confirm" type="object" class="oe_highlight"/>
+                    <button name="confirm_sale_orders" string="Confirm" type="object" class="oe_highlight" context="{'so_mass_confirm': True}"/>
                     or
                     <button string="Cancel" class="oe_link" special="cancel" />
                 </footer>
